Fix mobile navigation spacing issue. Resolves #289

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -23,6 +23,9 @@
 #header.logged-out {
   height: 80px;
   ul.inline-list { margin-bottom: 10px; }
+  @media (max-width: 767px) {
+    height: 30px;
+  }
 }
 
 ul.inline-list .fi-social-github {
